--- a/pages/area_favorito/area_favorito.css
+++ b/pages/area_favorito/area_favorito.css
@@ -1,3 +1,7 @@
+#area-favorito {
+    flex: 1;
+}
+
 .area-favorito {
     margin-top: 2rem;
     justify-content: center;
@@ -56,6 +60,18 @@
 
 .area-favorito-card .card-title {
     font-size: 20px;
+}
+
+.area-favorito-no-content {
+    display: flex;
+    flex: 1;
+    justify-content: center;
+    align-items: center;
+}
+
+.area-favorito-no-content h2 {
+   font-weight: 700;
+   color: var(--white);
 }
 
 #modal-perfil .modal-content input {
