--- a/pages/landing_page/landing_page.css
+++ b/pages/landing_page/landing_page.css
@@ -58,3 +58,28 @@
     text-decoration: none;
 }
 
+.swiper {
+    width: 100%;
+    height: 100%;
+  }
+
+.swiper-slide {
+    text-align: center;
+    font-size: 38px;
+    background: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+.swiper-slide img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+
+.swiper {
+    margin-left: auto;
+    margin-right: auto;
+  }
