--- a/pages/landing_page/landing_page.css
+++ b/pages/landing_page/landing_page.css
@@ -66,7 +66,7 @@
 .swiper-slide {
     text-align: center;
     font-size: 18px;
-    background: #fafafa;
+    background: #28282c;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -92,17 +92,13 @@
   
   */
 
-.area-cliente {
-    margin-top: 2rem;
-    justify-content: center;
-}
-
 .area-cliente .card-title {
     font-size: 22px;
 }
 
 .area-cliente-card .card-img-top {
-    min-height: 176px;
+    min-height: 100px;
+    max-height: 200px;
 }
 
 .area-cliente-card {
@@ -145,53 +141,5 @@
 }
 
 .area-cliente-card .card-title {
-    font-size: 20px;
-}
-
-#modal-perfil .modal-content input {
-    cursor: not-allowed;
-}
-
-.btn-salvar {
-    text-align: right;
-}
-
-.swal2-cancel {
-    margin-right: 15px;
-}
-
-.btn-pesquisa {
-    box-sizing: border-box;
-    margin: auto;
-    border: solid 2px var(--secondary);
-    border-radius: 50%;
-    width: 60px;
-    height: 60px;
-    line-height: 50px;
-    font: 26px Helvetica;
-    text-align: center;
-    background: var(--secondary);
-    cursor: pointer;
-    user-select: none;
-    transition: all .4s ease-in-out;
-    transform: scale(1);
-    box-shadow: 0 0 20px rgba(0, 0, 0, .4);
-    outline: none !important;
-}
-
-.btn-pesquisa i {
-    color: var(--black);
-}
-
-.btn-pesquisa:hover {
-    box-shadow: 0 0 10px rgba(0, 0, 0, .8);
-    transform: scale(1.05);
-}
-
-.btn-position-fixed {
-    position: fixed;
-    bottom: 3%;
-    right: 2%;
-    margin: auto;
-    z-index: 500;
+    font-size: 16px;
 }
