--- a/pages/landing_page/landing_page.css
+++ b/pages/landing_page/landing_page.css
@@ -23,7 +23,12 @@
     font-size: min(22px, 6vw);
 }
 
+#header-text {
+    margin-bottom: 250px;
+}
+
 .content-index .sobre-img {
+    margin-top: 100px;
     width: 100%;
     height: auto;
 }
@@ -59,7 +64,7 @@
 }
 
 .swiper {
-    width: 100%;
+    width: 85%;
     height: 100%;
 }
 
@@ -84,13 +89,19 @@
     margin-right: auto;
 }
 
-/* 
-  
-  
-  
-  
-  
-  */
+.swiper-wrapper{
+    width: 100%;
+    height: auto;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.swiper-wrapper .swiper-slide{
+    width: 100px;
+    height: auto;
+    text-align: center;
+    
+}
 
 .area-cliente .card-title {
     font-size: 22px;
