--- a/pages/landing_page/landing_page.css
+++ b/pages/landing_page/landing_page.css
@@ -1,17 +1,18 @@
-.index {
+.index{
     font-family: 'Montserrat', sans-serif;
-    background-image: url("../../assets/images/back-index-2.jpg");
-    background-repeat: no-repeat;
-    background-size: 100% auto;
 }
 
-.header-index {
+.header-index{
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
+
     height: 100vh;
     width: 100%;
+
+    background-image: url("../../assets/images/back-index-2.jpg");
+    background-repeat: no-repeat;
 }
 
 .header-index h3 {
@@ -62,8 +63,16 @@
     text-decoration: none;
 }
 
+.establishments-carousel-section {
+    margin: 3rem auto 2rem;
+}
+
+.establishments-carousel {
+    margin-top: 2rem;
+}
+
 .swiper {
-    width: 85%;
+    width: 100%;
     height: 100%;
 }
 
@@ -102,13 +111,17 @@
     
 }
 
+.landing-page-cliente-card-header {
+    position: relative;
+}
+
 .landing-page-cliente-card .card-title {
     font-size: 22px;
 }
 
 .landing-page-cliente-card .card-img-top {
-    min-height: 100px;
-    max-height: 200px;
+    min-height: 176px;
+    max-height: 255px;
 }
 
 .landing-page-cliente-card {
@@ -129,7 +142,9 @@
 .swiper-slide .status-fechado {
     text-align: center;
     position: absolute;
-    top: calc(100% - 258px);
+    bottom: 0;
+    font-size: 1rem;
+    font-weight: 700;
 }
 
 .swiper-slide .status-aberto {
@@ -151,4 +166,10 @@
 
 .area-cliente-card .card-title {
     font-size: 16px;
+}
+
+@media screen and (max-width: 576px){
+    .header-index{
+        height: 70vh;
+    }
 }
